--- a/CrudApp/Views/Models/Index.cshtml
+++ b/CrudApp/Views/Models/Index.cshtml
@@ -3,12 +3,12 @@
 @{
     ViewData["Title"] = "Index";
 }
-
+<a asp-action="AddOrEdit" class="btn btn-outline-success"><i class="far fa-plus-square"></i>Create New</a>
 <div class="col-4 p-0 justify-content-end">
     <form asp-controller="Models" asp-action="Index">
         <span class="btn-group">
             <input class="form-control" type="text" name="SearchText" placeholder="Search Key"/>
-            <input class="p-1 ml-2 btn btn-sm btn-info" type="submit" value="Search"/>
+            <input class="p-1 ml-2 btn btn-sm btn-success" type="submit" value="Search"/>
         </span>
     </form>
 </div>
@@ -20,10 +20,10 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
-                <a asp-action="AddOrEdit" class="btn btn-outline-success"><i class="far fa-plus-square"></i>Create New</a>
+                @*<a asp-action="AddOrEdit" class="btn btn-outline-success"><i class="far fa-plus-square"></i>Create New</a>*@
             </th>
         </tr>
     </thead>
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Description)
+                @Html.DisplayFor(modelItem => item.FirstName)
             </td>
             <td>
                 <a asp-action="AddOrEdit" asp-route-id="@item.Id"><i class="fa fa-marker fa-lg"></i></a>
